# mytinylib

./: CMakeLists.txt  README.md
include/: array.h
src/: array.c
tests/: CMakeLists.txt  arrayTests.c
